src-tauri/tests/snapshots/wire_format__agent_event_notification_tool_use.snap
---
source: tests/wire_format.rs
assertion_line: 269
expression: "serde_json::to_value(&event).unwrap()"
---
{
  "agent": "claude",
  "classifier": "claude",
  "kind": {
    "kind": "notification",
    "notification_kind": "tool_use"
  },
  "message": "tool: Bash",
  "project_id": null,
  "task_id": null,
  "timestamp": "2026-05-15T17:00:00+00:00"
}
