src-tauri/tests/snapshots/wire_format__agent_event_stop.snap
---
source: tests/wire_format.rs
expression: "serde_json::to_value(&event).unwrap()"
---
{
  "agent": "claude",
  "classifier": "claude",
  "kind": {
    "kind": "stop"
  },
  "message": "session ended",
  "project_id": null,
  "timestamp": "2026-05-15T17:00:00+00:00",
  "workspace_id": null
}
