src-tauri/tests/snapshots/wire_format__agents_provider_codex.snap
---
source: tests/wire_format.rs
assertion_line: 840
expression: "serde_json::to_value(AgentProvider::Codex).unwrap()"
---
"codex"
