src-tauri/tests/snapshots/wire_format__agents_start_request_args.snap
---
source: tests/wire_format.rs
expression: args
---
{
  "provider": "claude",
  "size": {
    "cols": 80,
    "rows": 24
  },
  "workspaceId": "ws-1"
}
