src-tauri/tests/snapshots/wire_format__bindings_ts.snap
---
source: tests/wire_format.rs
assertion_line: 37
expression: content
---
// This file has been generated by Tauri Specta. Do not edit this file manually.

import { invoke as __TAURI_INVOKE, Channel } from "@tauri-apps/api/core";

/** Commands */
export const commands = {
	greet: (name: string) => __TAURI_INVOKE<string>("greet", { name }),
	/**  Login-shell `$PATH` captured at app startup. OnceLock-cached. */
	getPath: () => __TAURI_INVOKE<string>("get_path"),
	setSecret: (key: string, value: string) => typedError<null, SecretsCommandError>(__TAURI_INVOKE("set_secret", { key, value })),
	getSecret: (key: string) => typedError<string | null, SecretsCommandError>(__TAURI_INVOKE("get_secret", { key })),
	ptySpawn: (opts: SpawnOptions, onData: Channel<number[]>) => typedError<PtyId, PtyError>(__TAURI_INVOKE("pty_spawn", { opts, onData })),
	ptyWrite: (id: PtyId, bytes: number[]) => typedError<null, PtyError>(__TAURI_INVOKE("pty_write", { id, bytes })),
	ptyResize: (id: PtyId, size: PtySize) => typedError<null, PtyError>(__TAURI_INVOKE("pty_resize", { id, size })),
	ptyKill: (id: PtyId) => typedError<null, PtyError>(__TAURI_INVOKE("pty_kill", { id })),
	subscribeUiMutations: (subId: string, onEvent: Channel<UiMutationEvent>) => typedError<null, null>(__TAURI_INVOKE("subscribe_ui_mutations", { subId, onEvent })),
	unsubscribeUiMutations: (subId: string) => typedError<null, null>(__TAURI_INVOKE("unsubscribe_ui_mutations", { subId })),
	projectsList: () => typedError<Project[], ProjectsCommandError>(__TAURI_INVOKE("projects_list")),
	projectsAdd: (path: string) => typedError<Project, ProjectsCommandError>(__TAURI_INVOKE("projects_add", { path })),
	projectsRemove: (id: string) => typedError<null, ProjectsCommandError>(__TAURI_INVOKE("projects_remove", { id })),
	fsWatcherSubscribe: (id: string, path: string, onEvent: Channel<WatchEvent>) => typedError<WatcherFallback, FsWatcherCommandError>(__TAURI_INVOKE("fs_watcher_subscribe", { id, path, onEvent })),
	fsWatcherUnsubscribe: (id: string) => typedError<boolean, FsWatcherCommandError>(__TAURI_INVOKE("fs_watcher_unsubscribe", { id })),
	tasksList: (projectId: string) => typedError<Task[], TasksCommandError>(__TAURI_INVOKE("tasks_list", { projectId })),
	tasksCreate: (projectId: string, name: string, sourceBranch: TaskSourceBranch) => typedError<Task, TasksCommandError>(__TAURI_INVOKE("tasks_create", { projectId, name, sourceBranch })),
	tasksDelete: (id: string) => typedError<null, TasksCommandError>(__TAURI_INVOKE("tasks_delete", { id })),
	telemetryGetEnabled: () => typedError<boolean, TelemetryCommandError>(__TAURI_INVOKE("telemetry_get_enabled")),
	telemetrySetEnabled: (enabled: boolean) => typedError<null, TelemetryCommandError>(__TAURI_INVOKE("telemetry_set_enabled", { enabled })),
	/**
	 *  Record one of the standard app events. `user_identify` carries
	 *  optional GitHub profile fields; the rest take no payload. All
	 *  gates (compile-time host, user toggle) live in the runtime.
	 */
	telemetryRecord: (event: TelemetryEvent, ghUsername: string | null, ghAccountId: string | null, email: string | null) => typedError<null, TelemetryCommandError>(__TAURI_INVOKE("telemetry_record", { event, ghUsername, ghAccountId, email })),
	subscribeUpdaterEvents: (onEvent: Channel<UpdateEvent>) => typedError<null, null>(__TAURI_INVOKE("subscribe_updater_events", { onEvent })),
	/**
	 *  Starts a check. The real `tauri-plugin-updater::check()` call lives
	 *  behind this command — we wrap it so the state machine sees the
	 *  transitions before the plugin's own events fire. EMD-22 wires the
	 *  real plugin path; for now we just begin and let the caller drive
	 *  transitions through `updater_simulate_event` in dev builds.
	 */
	updaterCheck: (reason: CheckReason) => typedError<null, UpdaterCommandError>(__TAURI_INVOKE("updater_check", { reason })),
	/**
	 *  Debug-only: hand the renderer a trigger to walk the state machine
	 *  through every UpdateEvent variant without a real update manifest.
	 *  Production builds drop this command entirely.
	 */
	updaterSimulateEvent: (event: UpdateEvent) => typedError<null, UpdaterCommandError>(__TAURI_INVOKE("updater_simulate_event", { event })),
	editorBufferSave: (projectId: string, workspaceId: string, filePath: string, content: string) => typedError<EditorBuffer, EditorBuffersCommandError>(__TAURI_INVOKE("editor_buffer_save", { projectId, workspaceId, filePath, content })),
	editorBufferClear: (projectId: string, workspaceId: string, filePath: string) => typedError<null, EditorBuffersCommandError>(__TAURI_INVOKE("editor_buffer_clear", { projectId, workspaceId, filePath })),
	editorBufferList: (projectId: string, workspaceId: string) => typedError<EditorBuffer[], EditorBuffersCommandError>(__TAURI_INVOKE("editor_buffer_list", { projectId, workspaceId })),
	viewStateSave: (key: string, valueJson: string) => typedError<null, ViewStateCommandError>(__TAURI_INVOKE("view_state_save", { key, valueJson })),
	viewStateGet: (key: string) => typedError<string | null, ViewStateCommandError>(__TAURI_INVOKE("view_state_get", { key })),
	viewStateGetAll: () => typedError<{ [key in string]: string }, ViewStateCommandError>(__TAURI_INVOKE("view_state_get_all")),
	viewStateDelete: (key: string) => typedError<null, ViewStateCommandError>(__TAURI_INVOKE("view_state_delete", { key })),
	viewStateReset: () => typedError<null, ViewStateCommandError>(__TAURI_INVOKE("view_state_reset")),
	githubSignInDeviceFlowStart: () => typedError<DeviceFlowStart, GithubCommandError>(__TAURI_INVOKE("github_sign_in_device_flow_start")),
	githubSignInDeviceFlowPoll: (flow: DeviceFlow) => typedError<IdentityRecord, GithubCommandError>(__TAURI_INVOKE("github_sign_in_device_flow_poll", { flow })),
	githubSignInViaGhCli: () => typedError<IdentityRecord, GithubCommandError>(__TAURI_INVOKE("github_sign_in_via_gh_cli")),
	githubSignOut: () => typedError<null, GithubCommandError>(__TAURI_INVOKE("github_sign_out")),
	githubMe: () => typedError<{
	login: string,
	id: string,
	name: string | null,
	email: string | null,
	avatar_url: string | null,
} | null, GithubCommandError>(__TAURI_INVOKE("github_me")),
	githubListRepos: () => typedError<RepoSummary[], GithubCommandError>(__TAURI_INVOKE("github_list_repos")),
	githubListPulls: (owner: string, repo: string) => typedError<PullRequestSummary[], GithubCommandError>(__TAURI_INVOKE("github_list_pulls", { owner, repo })),
	githubGetPull: (owner: string, repo: string, number: number) => typedError<PullRequestSummary, GithubCommandError>(__TAURI_INVOKE("github_get_pull", { owner, repo, number })),
	githubGetPullDiff: (owner: string, repo: string, number: number) => typedError<string, GithubCommandError>(__TAURI_INVOKE("github_get_pull_diff", { owner, repo, number })),
	/**
	 *  Spawn `provider` for `task_id`. Returns the PTY id so the
	 *  renderer can wire `pty_write` / `pty_resize` / `pty_kill` to the
	 *  same id without a follow-up lookup.
	 */
	agentsStart: (taskId: string, provider: AgentProvider, size: PtySize, onOutput: Channel<number[]>) => typedError<PtyId, AgentsCommandError>(__TAURI_INVOKE("agents_start", { taskId, provider, size, onOutput })),
	agentsStop: (taskId: string) => typedError<null, AgentsCommandError>(__TAURI_INVOKE("agents_stop", { taskId })),
	agentsListProviders: () => __TAURI_INVOKE<ProviderSpec[]>("agents_list_providers"),
};

/* Types */
/**
 *  Renderer-visible projection of one classified hook event.
 *  `task_id` / `project_id` are filled in by the agent-spawn site
 *  (EMD-27) once it lands; until then they're `None` for every
 *  event.
 */
export type AgentEvent = {
	agent: string,
	classifier: string,
	kind: AgentEventKind,
	message: string | null,
	/**
	 *  ISO-8601 UTC timestamp set at enrichment time. Stored as a
	 *  string at the wire boundary because specta requires a
	 *  dedicated feature flag to round-trip `chrono::DateTime`.
	 */
	timestamp: string,
	/**
	 *  Set by the agent-spawn site (EMD-27) when it injects the
	 *  hook env vars; `None` for raw events received before any
	 *  spawn integration.
	 */
	task_id: string | null,
	project_id: string | null,
};

export type AgentEventKind = 
/**  A normal in-flight notification (e.g. tool use, status message). */
{ kind: "notification"; notification_kind?: NotificationKind } | 
/**  Agent's session ended cleanly. */
{ kind: "stop" } | 
/**  Agent reported an error. */
{ kind: "error" } | 
/**
 *  Classifier didn't recognize the input; surfaces as an opaque
 *  pass-through so the renderer can still log it.
 */
{ kind: "unknown" };

/**
 *  Stable identifier the renderer passes back when starting an
 *  agent. New variants land in this enum (and the `provider_spec`
 *  match) per agent supported.
 */
export type AgentProvider = "codex" | "claude" | "cursor" | "opencode" | "continue" | "cline";

export type AgentsCommandError = {
	code: AgentsErrorCode,
	message: string,
};

export type AgentsErrorCode = "task_not_found" | "already_running" | "spawn_failed" | "storage";

/**
 *  Why the manager kicked off a check. Used both for backoff bucket
 *  selection (a `Manual` check should retry faster than a passive
 *  `Interval` check) and for renderer-side UX (a `Manual` failure
 *  surfaces a louder error message).
 */
export type CheckReason = "startup" | "resume" | "focus" | "interval" | "manual";

/**
 *  Opaque handle for the renderer to pass back to
 *  `device_flow_poll`. We expose just the bits the OAuth server
 *  needs and keep the rest internal.
 */
export type DeviceFlow = {
	device_code: string,
	polling_interval_seconds: number,
};

/**
 *  What the renderer needs to display when the flow starts.
 *  `u32` for the timing fields because specta forbids BigInt types
 *  over IPC. GitHub's intervals + expiries fit comfortably in u32.
 */
export type DeviceFlowStart = {
	user_code: string,
	verification_uri: string,
	device_code: string,
	polling_interval_seconds: number,
	expires_in_seconds: number,
};

export type EditorBuffer = {
	id: string,
	project_id: string,
	workspace_id: string,
	file_path: string,
	content: string,
	/**
	 *  Milliseconds-since-epoch when the row was last written, serialized
	 *  as a string at the wire boundary because specta refuses to emit
	 *  i64 (BigInt-style types lose precision through `JSON.parse`).
	 */
	updated_at_ms: string,
};

export type EditorBuffersCommandError = {
	code: EditorBuffersErrorCode,
	message: string,
};

export type EditorBuffersErrorCode = "storage";

export type FsWatcherCommandError = {
	code: FsWatcherErrorCode,
	message: string,
};

export type FsWatcherErrorCode = "path_missing" | "notify" | "io";

export type GithubCommandError = {
	code: GithubErrorCode,
	message: string,
};

export type GithubErrorCode = "not_signed_in" | "unauthorized" | "storage" | "oauth" | "network" | "rate_limited" | "gh_cli_unavailable" | "malformed";

export type IdentityRecord = {
	login: string,
	id: string,
	name: string | null,
	email: string | null,
	avatar_url: string | null,
};

export type NotificationKind = "general" | "permission_prompt" | "tool_use" | "status";

/**
 *  Projection of one row from the `projects` table that the renderer
 *  actually consumes. Mirror of the columns used in the v1 CRUD surface.
 *  Fields that exist in the schema but aren't needed yet
 *  (`workspace_provider`, `base_ref`, `ssh_connection_id`) are
 *  intentionally omitted — port them when a feature requires them.
 */
export type Project = {
	id: string,
	name: string,
	path: string,
	created_at: string,
	updated_at: string,
};

export type ProjectsCommandError = {
	/**  Stable machine-readable identifier; the renderer matches on this. */
	code: ProjectsErrorCode,
	/**  Human-readable hint. Surface to the user verbatim. */
	message: string,
};

export type ProjectsErrorCode = "empty_path" | "not_absolute" | "path_missing" | "path_not_directory" | "duplicate_path" | "not_found" | "storage";

/**
 *  Static spec for a provider — the literal binary name on PATH +
 *  default CLI args. The renderer can render the spec to a
 *  provider picker without round-tripping per spawn.
 */
export type ProviderSpec = {
	provider: AgentProvider,
	/**  Display name shown in the renderer's picker. */
	label: string,
	/**  Binary to spawn (looked up on PATH). */
	binary: string,
	/**  Default args appended after the binary. */
	args: string[],
	/**
	 *  Per-agent env overrides merged on top of the login-shell env
	 *  before hook-env injection.
	 */
	env: { [key in string]: string },
};

export type PtyError = { kind: "not_found"; id: PtyId } | { kind: "spawn_failed"; message: string } | { kind: "io"; message: string };

export type PtyId = number;

export type PtySize = {
	rows: number,
	cols: number,
};

export type PullRequestSummary = {
	number: number,
	title: string,
	state: string,
	draft: boolean,
	html_url: string,
	author: string | null,
	base_ref: string,
	head_ref: string,
	/**
	 *  ISO-8601; same string-on-the-wire choice as editor_buffers
	 *  and agent_hooks.
	 */
	created_at: string,
	updated_at: string,
};

export type RepoSummary = {
	owner: string,
	name: string,
	full_name: string,
	private: boolean,
	default_branch: string | null,
	description: string | null,
};

export type SecretsCommandError = {
	/**  Stable machine-readable identifier. Renderer matches on this. */
	code: SecretsErrorCode,
	/**  Human-readable hint. Surface this to the user verbatim. */
	message: string,
};

export type SecretsErrorCode = "keyring_unavailable" | "crypto" | "storage" | "invalid_value" | "unknown";

export type SpawnOptions = {
	command: string,
	args: string[],
	cwd: string | null,
	env: { [key in string]: string },
	size: PtySize,
};

/**
 *  Renderer-facing task projection. Fields beyond v1 (`task_branch`,
 *  `linked_issue`, etc.) live in the DB schema but stay out of this
 *  struct until a feature needs them.
 */
export type Task = {
	id: string,
	project_id: string,
	name: string,
	status: TaskStatus,
	path: string,
	source_branch: TaskSourceBranch,
	pty_id: string | null,
	created_at: string,
	updated_at: string,
};

/**
 *  Where the task's worktree branches from. JSON-encoded in the
 *  `source_branch` column; the domain layer is the only thing that
 *  touches the wire format. Schema migration 0002/0003 from Drizzle
 *  history was about turning a plain string into this discriminator —
 *  in emdash-dev's collapsed bootstrap it ships tagged from day one.
 */
export type TaskSourceBranch = { type: "local"; branch: string } | { type: "remote"; host: string; branch: string };

export type TaskStatus = "active" | "archived";

export type TasksCommandError = {
	code: TasksErrorCode,
	message: string,
};

export type TasksErrorCode = "empty_name" | "project_not_found" | "project_path_invalid" | "not_found" | "worktree_path_exists" | "worktree_failed" | "git" | "storage" | "malformed";

export type TelemetryCommandError = {
	code: TelemetryErrorCode,
	message: string,
};

export type TelemetryErrorCode = "storage" | "invalid";

/**
 *  Top-level event identifier. New variants are additive — receivers
 *  ignore unknown names so a stale collector won't drop a release.
 */
export type TelemetryEvent = "app_focus" | "app_unfocus" | "app_dau_ping" | "user_identify";

export type UiMutationEvent = { kind: "project_created"; id: string } | { kind: "project_updated"; id: string } | { kind: "project_deleted"; id: string } | { kind: "task_created"; id: string; project_id: string } | { kind: "task_updated"; id: string; project_id: string } | { kind: "task_deleted"; id: string; project_id: string } | 
/**
 *  One classified agent-hook event (EMD-9). `task_id` is `None`
 *  until the agent-spawn site (EMD-27) injects coordinates.
 */
{ kind: "agent_hook_event"; task_id: string | null; event: AgentEvent } | 
/**  EMD-13: GitHub identity changed (sign-in / sign-out / refresh). */
{ kind: "github_identity_changed" } | 
/**
 *  EMD-13: GitHub repo-scoped data changed (PRs, comments, reviews
 *  of the named `owner/name`).
 */
{ kind: "github_data_changed"; repo: string } | 
/**  EMD-27: an agent started for the named task. */
{ kind: "agent_started"; task_id: string; provider: AgentProvider } | 
/**
 *  EMD-27: an agent exited (clean or killed). `exit_code` is
 *  `None` when the host stopped the agent before the child
 *  process reported a code.
 */
{ kind: "agent_exited"; task_id: string; exit_code: number | null };

/**
 *  Stable machine-readable error code. The renderer matches on this
 *  to decide whether to suggest "Retry now" (network) or "Reinstall"
 *  (signature_invalid).
 */
export type UpdateError = "network" | "signature_invalid" | "manifest_malformed" | "download_failed" | "install_failed" | "internal";

/**
 *  State the renderer needs to render the updater UI. The variants
 *  are intentionally narrow — internal state machine transitions
 *  that don't change what the user sees never broadcast.
 */
export type UpdateEvent = 
/**  A check has started. The renderer shows a spinner. */
{ kind: "checking"; reason: CheckReason } | 
/**  The server confirms we're on the latest version. */
{ kind: "up_to_date" } | 
/**  A newer version is available. Renderer shows "Download". */
{ kind: "available"; version: string; notes: string | null } | 
/**
 *  Download progress. The throttle caps these at ~200 ms apart
 *  so a fast download doesn't flood the renderer with re-renders.
 */
{ kind: "downloading"; progress: number | null } | 
/**
 *  Download complete, pending install on exit. Renderer can
 *  surface "Restart to install" if it wants to fast-path the
 *  `RunEvent::Exit` hook.
 */
{ kind: "ready_to_install"; version: string } | 
/**
 *  A check or download failed. The manager will retry per the
 *  backoff schedule unless the reason was `Manual`.
 */
{ kind: "error"; code: UpdateError; message: string; will_retry: boolean };

export type UpdaterCommandError = {
	code: UpdaterErrorCode,
	message: string,
};

export type UpdaterErrorCode = "already_checking" | "internal";

export type ViewStateCommandError = {
	code: ViewStateErrorCode,
	message: string,
};

export type ViewStateErrorCode = "storage" | "malformed";

export type WatchEvent = {
	/**
	 *  Coalesced batch of paths; for `Renamed`, the `from` / `to`
	 *  inside the kind carry the pair, and `paths` is empty.
	 */
	paths: string[],
	event: WatchEventKind,
};

export type WatchEventKind = { kind: "created" } | { kind: "modified" } | { kind: "deleted" } | { kind: "renamed"; from: string; to: string };

/**
 *  Whether the watcher is running with full recursive coverage or
 *  degraded to the EMD-11 ENOSPC fallback (top-level only).
 */
export type WatcherFallback = "none" | 
/**
 *  Linux inotify limit hit; scoped to depth 1. User can remediate
 *  with `sysctl fs.inotify.max_user_watches=524288`.
 */
"inotify_enospc_depth_one";

/* Tauri Specta runtime */
async function typedError<T, E>(result: Promise<T>): Promise<{ status: "ok"; data: T } | { status: "error"; error: E }> {
    try {
        return { status: "ok", data: await result };
    } catch (e) {
        if (e instanceof Error) throw e;
        return { status: "error", error: e as any };
    }
}
