src-tauri/tests/snapshots/wire_format__editor_buffer_list_request_args.snap
---
source: tests/wire_format.rs
assertion_line: 256
expression: request_args
---
{
  "projectId": "p1",
  "workspaceId": "ws1"
}
