src-tauri/tests/snapshots/wire_format__editor_buffer_save_request_args.snap
---
source: tests/wire_format.rs
assertion_line: 247
expression: request_args
---
{
  "content": "fn main() {}\n",
  "filePath": "src/main.rs",
  "projectId": "p1",
  "workspaceId": "ws1"
}
