src-tauri/tests/snapshots/wire_format__fs_watcher_subscribe_request_args.snap
---
source: tests/wire_format.rs
assertion_line: 245
expression: request_args
---
{
  "id": "project-1",
  "path": "/Users/example/code/repo"
}
