src-tauri/tests/snapshots/wire_format__fs_watcher_unsubscribe_request_args.snap
---
source: tests/wire_format.rs
assertion_line: 251
expression: request_args
---
{
  "id": "project-1"
}
